# finufft

./: CMakeLists.txt  LICENSE  README.md  TEST.md  contributing.md  perftest_results.csv
.github/workflows/: checkout-old-commit.yml  codspeed.yml  perftest-pr-head.yml  perftest.yml  perftest_ci.yml  pertest.yml  pr-managed-comment.yml  test-consumer.yml  test-producer.yml
devel/: CMakeLists.txt  find_sigma_bound.cpp
docs/: index.rst  performance_change.rst.j2  performance_ducc.rst  performance_fftw.rst  perftest_timings.rst  perftest_timings.rst.j2  summary_performance_change.rst
include/finufft/: heuristics.hpp  makeplan.hpp
perftest/: CMakeLists.txt  collect_dual_perftest.py  complexity.cpp  perftest.py  perftest_config.py  perftest_pr_head.py  perftest_results.csv  run_perftest_ci.py  run_perftest_matrix.py
perftest/benchmarks/: CMakeLists.txt  example.cpp  perftest_bench.cpp
src/: CMakeLists.txt
src/heuristics/: estimate_sigma.cpp  sigma_estimator.cpp  trained_estimator.cpp
